2008-03-19 TualatriX <tualatrix@gmail.com>

	* programs/python/ubuntu-tweak/Utility.py: 加入单元测试功能。
	* programs/python/ubuntu-tweak/Icon.py: 将Icon换上了新的API。
	
2008-03-18 TualatriX <tualatrix@gmail.com>

	* programs/python/ubuntu-tweak: 加入Ubuntu Tweak最新分支。

2008-03-04 TualatriX <tualatrix@gmail.com>

	* documents/gobject-concepts: 加入了《GObject的概念》。

2008-03-03 TualatriX <tualatrix@gmail.com>

	* gtk/socket-plug: 加入了一个GTK+的socket和plug的例子。
	* programs: 所有的程序将移入这里。
	* documents: 所有的文档将移入这里。

2008-02-27 TualatriX <tualatrix@gmail.com>

	* gtk/pagico: 加入了基于gtkembedmoz的Pagico客户端。

2008-02-21 TualatriX <tualatrix@gmail.com>

	* archive/stu_manager: 加入了第一次编的软件。

2008-02-20 TualatriX <tualatrix@gmail.com>

	* gtk/example/boy: 加入一个GObject的例子。

2008-01-19 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.8

2008-01-16 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.7

2008-01-15 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.6

2008-01-14 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.5

2008-01-09 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.4

2008-01-08 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.3.0

2008-01-07 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.2.5

2008-01-06 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.2

2008-01-05 TualatriX <tualatrix@gmail.com>

	* "Myword" 0.1

2008-01-04 TualatriX <tualatrix@gmail.com>

	* "Myword" added the result function.

2008-01-02 TualatriX <tualatrix@gmail.com>

	* "Myword" almost finished the FirstRecite function

2008-01-01 TualatriX <tualatrix@gmail.com>

	* "Myword" added the readword function

2007-12-31 TualatriX <tualatrix@gmail.com>

	* "Myword" added the ReciteRecord class

2007-12-30 TualatriX <tualatrix@gmail.com>

	* "Myword" finished the ChooseBook function

2007-12-29 TualatriX <tualatrix@gmail.com>

	* "Myword" added the BookList class

2007-12-27 TualatriX <tualatrix@gmail.com>

	* "Myword" added the DictFile class

2007-12-23 TualatriX <tualatrix@gmail.com>

	* Added the "Installer"
